[package]
name = "my_http"
version = "0.1.0"
authors = ["lengfangbing <lengfangbing@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
http = "0.2"
